2012-07-25  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* signal.cc (clock_nanosleep): Force return on signal rather than
	letting cancelable_wait loop on signal.

2012-07-25  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (enum bin_status): Add dir_not_empty.
	(try_to_bin): Call NtQueryInformationFile(FileInternalInformation)
	with exact buffer size.  Explain why.
	Ditto for NtSetInformationFile(FileRenameInformation).
	Handle race-condition which might lead to renaming a non-empty
	directory.
	(unlink_nt): Rearrange and partially rephrase comments related to the
	STATUS_SHARING_VIOLATION case.  Fix condition under which a dir is
	tested for being non-empty.  Handle dir_not_empty return code from
	try_to_bin.  Gracefully handle disappearing directory in rm -r
	workaround.  Fix typo in comment.

2012-07-24  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.cc (wincapc::init): Drop memset call since it can result in
	a race condition.  Drop all considerations for pre-Windows 2000 systems
	since Cygwin won't start on them anyway.

2012-07-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	Change "set_thread_waiting" to "set_signal_arrived" throughout.

2012-07-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000013.
	* cygserver_ipc.h (ipc_set_proc_info): Use _cygtls::ipc_set_proc_info
	to set per-thread signal arrived value.
	* cygthread.cc (cygthread::detach): Use per-thread signal_arrived via
	set_thread_waiting.
	* fork.cc (_cygtls::fixup_after_fork): Clear signal_arrived.
	(_cygtls::remove): Close any signal_arrived handle when thread exists.
	(_cygtls::find_tls): Remove unneeded function.
	* cygtls.h: Update copyright.
	(class _cygtls): Reorganize to help avoid rebuilding newlib when
	structure changes.
	(_cygtls::event): Delete.
	(_cygtls::threadkill): Ditto.	
	(_cygtls::signal_waiting): Declare new bool.
	(_cygtls::find_tls): Delete declaration.
	(_cygtls::set_threadkill): Ditto.
	(_cygtls::reset_threadkill): Ditto.