@@ -1,3 +1,9 @@
+2012-07-28  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/inttypes.h: Add x86_64 target considerations throughout.
+	Define macros in C++ according to C99 requirements.
+	* include/stdint.h: Ditto.
+
 2012-07-25  Christopher Faylor  <me.cygwin2012@cgf.cx>
 
 	* signal.cc (clock_nanosleep): Force return on signal rather than
